[package]
name = "encointer-rpc"
version = "20.1.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "RPC for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
jsonrpsee = { workspace = true }
jsonrpsee-core = { workspace = true }
jsonrpsee-types = { workspace = true }
thiserror = { workspace = true }
