[package]
name = "pallet-encointer-sybil-gate-template"
version = "0.8.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]
log = { version = "0.4.14", default-features = false }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false }

# local deps
encointer-primitives = { path = "../primitives", default-features = false, features = ["sybil"]}

# substrate deps
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }

# polkadot deps
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }

[dev-dependencies]
hex = { version = "*" }
sp-io = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "master" }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-system/std",
    "frame-support/std",
    "log/std",
    "polkadot-parachain/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm/std",
    "encointer-primitives/std",
]
