[package]
name = "pallet-encointer-sybil-gate"
version = "0.3.7"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]
[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.6"

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.frame-system]
default-features = false
package = "frame-system"
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.frame-support]
default-features = false
package = "frame-support"
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.xcm]
default-features = false
git = "https://github.com/paritytech/polkadot"
rev = "4a94b71ed7abdba231de8a03a7a22975cab6a079" # commit from the same day as the substrate commit we use

[features]
default = ["std"]
std = [
    "codec/std",
    "rstd/std",
    "frame-system/std",
    "frame-support/std",
    "xcm/std",
]