[package]
name = "test-utils"
version = "3.0.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Test utils for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = [
    "derive",
] }
log = "0.4.20"
# local deps
encointer-balances = { package = "pallet-encointer-balances", path = "../balances" }
encointer-ceremonies = { package = "pallet-encointer-ceremonies", path = "../ceremonies" }
encointer-communities = { package = "pallet-encointer-communities", path = "../communities" }
encointer-primitives = { path = "../primitives" }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler" }

# substrate deps
frame-benchmarking = "25.0.0"
frame-support = "25.0.0"
frame-system = "25.0.0"
pallet-balances = "25.0.0"
pallet-timestamp = "24.0.0"
sp-core = "25.0.0"
sp-inherents = "24.0.0"
sp-io = "27.0.0"
sp-keyring = "28.0.0"
sp-runtime = "28.0.0"
sp-std = "12.0.0"
