[package]
name = "test-utils"
version = "3.0.2"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Test utils for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true, features = ["std"] }
# local deps
encointer-balances = { package = "pallet-encointer-balances", path = "../balances" }
encointer-ceremonies = { package = "pallet-encointer-ceremonies", path = "../ceremonies" }
encointer-communities = { package = "pallet-encointer-communities", path = "../communities" }
encointer-primitives = { path = "../primitives" }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler" }

# substrate deps
frame-benchmarking = { workspace = true, features = ["std"] }
frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-std = { workspace = true, features = ["std"] }

[features]
runtime-benchmarks = [
    "encointer-balances/runtime-benchmarks",
    "encointer-ceremonies/runtime-benchmarks",
    "encointer-communities/runtime-benchmarks",
    "encointer-scheduler/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "encointer-balances/try-runtime",
    "encointer-ceremonies/try-runtime",
    "encointer-communities/try-runtime",
    "encointer-scheduler/try-runtime",
]
