[package]
name = "test-utils"
version = "21.3.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Test utils for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"
publish = false

[lints]
workspace = true

[dependencies]
log = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true }

# local deps
encointer-primitives = { workspace = true, features = ["std"] }
pallet-encointer-balances = { workspace = true, features = ["std"] }
pallet-encointer-ceremonies = { workspace = true, features = ["std"] }
pallet-encointer-communities = { workspace = true, features = ["std"] }
pallet-encointer-scheduler = { workspace = true, features = ["std"] }
pallet-encointer-treasuries = { workspace = true, features = ["std"] }

# substrate deps
frame-benchmarking = { workspace = true, features = ["std"] }
frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-std = { workspace = true, features = ["std"] }

[features]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-encointer-balances/runtime-benchmarks",
    "pallet-encointer-ceremonies/runtime-benchmarks",
    "pallet-encointer-communities/runtime-benchmarks",
    "pallet-encointer-scheduler/runtime-benchmarks",
    "pallet-encointer-treasuries/runtime-benchmarks",
    "encointer-primitives/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "pallet-encointer-balances/try-runtime",
    "pallet-encointer-ceremonies/try-runtime",
    "pallet-encointer-communities/try-runtime",
    "pallet-encointer-scheduler/try-runtime",
    "encointer-primitives/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-encointer-treasuries/try-runtime",
    "pallet-timestamp/try-runtime",
    "sp-runtime/try-runtime",
]
