[package]
name = "pallet-encointer-vouches"
version = "3.0.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Vouches pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
approx = { version = "0.5.1", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false }

# local deps
encointer-primitives = { path = "../primitives", default-features = false, features = ["serde_derive"], version = "3.0.0" }

# substrate deps
frame-benchmarking = { default-features = false, optional = true, version = "25.0.0" }
frame-support = { default-features = false, version = "25.0.0" }
frame-system = { default-features = false, version = "25.0.0" }
pallet-timestamp = { default-features = false, version = "24.0.0" }
sp-core = { default-features = false, version = "25.0.0" }
sp-runtime = { default-features = false, version = "28.0.0" }
sp-std = { default-features = false, version = "12.0.0" }

[dev-dependencies]
approx = "0.5.1"
sp-io = "27.0.0"
test-utils = { path = "../test-utils" }

[features]
default = [ "std" ]
std = [
	"approx/std",
	"codec/std",
	# local deps
	"encointer-primitives/std",
	# substrate deps
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [ "approx", "frame-benchmarking" ]

try-runtime = [ "frame-system/try-runtime" ]
