[package]
name = "encointer-balances-tx-payment-rpc"
version = "3.0.2"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Balances tx payment rpc for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true, features = ["std"] }
parking_lot = { workspace = true }
thiserror = { workspace = true }

# local deps
encointer-balances-tx-payment-rpc-runtime-api = { workspace = true }
encointer-primitives = { workspace = true }
encointer-rpc = { workspace = true }

# substrate deps
pallet-transaction-payment = { workspace = true, features = ["std"] }
pallet-transaction-payment-rpc = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
