[package]
name = "pallet-encointer-bazaar-rpc"
version = "1.0.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Bazaar rpc for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
jsonrpsee = { version = "0.16.2", features = [
    "client-core",
    "server",
    "macros",
] }
log = "0.4.14"
parking_lot = "0.12.0"
thiserror = "1.0.31"

# local deps
encointer-bazaar-rpc-runtime-api = { package = "pallet-encointer-bazaar-rpc-runtime-api", path = "runtime-api" }
encointer-primitives = { path = "../../primitives" }
encointer-rpc = { path = "../../rpc" }

# substrate deps
sc-rpc = "24.0.0"
sc-rpc-api = "0.28.0"
sp-api = "21.0.0"
sp-blockchain = "23.0.0"
sp-runtime = "26.0.0"
