[package]
name = "encointer-ceremonies-assignment"
version = "1.2.0"
edition = "2021"

[dependencies]

# local deps
encointer-primitives = { path = "../../primitives", default-features = false }

# substrate deps
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v1.0.0" }
sp-std = { version = "8.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v1.0.0" }

[dev-dependencies]
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = ["encointer-primitives/std", "sp-std/std", "sp-runtime/std"]
