[package]
name = "encointer-ceremonies-assignment"
version = "3.0.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Ceremonies assignments for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
# local deps
encointer-primitives = { path = "../../primitives", default-features = false, version = "3.0.0" }

# substrate deps
sp-runtime = { default-features = false, version = "28.0.0" }
sp-std = { default-features = false, version = "12.0.0" }

[dev-dependencies]
sp-core = "25.0.0"

[features]
default = ["std"]
std = ["encointer-primitives/std", "sp-std/std", "sp-runtime/std"]
