[package]
name = "encointer-ceremonies-assignment"
version = "7.1.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Ceremonies assignments for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
# local deps
encointer-primitives = { workspace = true }

# substrate deps
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = ["encointer-primitives/std", "sp-runtime/std", "sp-std/std"]
