[package]
name = "encointer-meetup-validation"
version = "3.0.1"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Meetup validation for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false }
serde = { version = "1.0.188", default-features = false, features = [
    "derive",
    "alloc",
] }

# local deps
encointer-primitives = { path = "../../primitives", default-features = false, version = "3.0.1" }

# substrate deps
sp-runtime = { default-features = false, version = "28.0.0" }
sp-std = { default-features = false, version = "12.0.0" }

[dev-dependencies]
rstest = "0.12.0"
sp-core = "25.0.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "encointer-primitives/std",
    "scale-info/std",
    "serde/std",
    "sp-runtime/std",
    "sp-std/std",
]
