[package]
name = "encointer-meetup-validation"
version = "3.0.2"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Meetup validation for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

# local deps
encointer-primitives = { path = "../../primitives", default-features = false, version = "3.0.2" }

# substrate deps
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
sp-core = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "encointer-primitives/std",
    "scale-info/std",
    "serde/std",
    "sp-runtime/std",
    "sp-std/std",
]
