[package]
name = "encointer-meetup-validation"
version = "10.1.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Meetup validation for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

# local deps
encointer-primitives = { workspace = true }

# substrate deps
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
sp-core = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "encointer-primitives/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "sp-runtime/std",
    "sp-std/std",
]
