[package]
authors = ["encointer.org <alain@encointer.org>"]
edition = "2021"
name = "pallet-encointer-ceremonies-rpc"
version = "1.0.0"

[dependencies]
jsonrpsee = {version = "0.14.0", features = ["server", "macros"]}
log = "0.4.14"
parking_lot = "0.12.0"
thiserror = "1.0.31"

# local deps
encointer-ceremonies-rpc-runtime-api = {package = "pallet-encointer-ceremonies-rpc-runtime-api", path = "runtime-api"}
encointer-primitives = {path = "../../primitives"}
encointer-rpc = {path = "../../rpc"}

# substrate deps
sc-rpc = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sc-rpc-api = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-blockchain = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-runtime = {version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
