[package]
name = "pallet-encointer-ceremonies-rpc"
version = "3.0.2"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Ceremonies rpc for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
jsonrpsee = { workspace = true }
log = { workspace = true, features = ["std"] }
parking_lot = { workspace = true }
thiserror = { workspace = true }

# local deps
encointer-ceremonies-rpc-runtime-api = { package = "pallet-encointer-ceremonies-rpc-runtime-api", path = "runtime-api", version = "3.0.2" }
encointer-primitives = { path = "../../primitives", version = "3.0.2" }
encointer-rpc = { path = "../../rpc", version = "3.0.2" }

# substrate deps
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
