[package]
name = "pallet-encointer-communities-rpc"
version = "2.0.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Communities rpc for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
jsonrpsee = { version = "0.16.3", features = [
    "client-core",
    "server",
    "macros",
] }
log = "0.4.20"
parking_lot = "0.12.0"
thiserror = "1.0.31"

# local deps
encointer-communities-rpc-runtime-api = { package = "pallet-encointer-communities-rpc-runtime-api", path = "runtime-api", version = "2.0.0" }
encointer-primitives = { path = "../../primitives", version = "2.0.0" }
encointer-rpc = { path = "../../rpc", version = "2.0.0" }

# substrate deps
sc-rpc = "25.0.0"
sc-rpc-api = "0.29.0"
sp-api = "22.0.0"
sp-blockchain = "24.0.0"
sp-runtime = "27.0.0"

[dev-dependencies]
sp-core = "24.0.0"
