[package]
name = "pallet-encointer-communities-rpc"
version = "20.1.1"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Communities rpc for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
jsonrpsee = { workspace = true }
log = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

# local deps
encointer-primitives = { workspace = true }
encointer-rpc = { workspace = true }
pallet-encointer-communities-rpc-runtime-api = { workspace = true }

# substrate deps
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
